--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "tw-elements": "^1.0.0-beta1",
     "ui": "^0.2.4",
     "web-vitals": "^2.1.4"
   },
