--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "redux-persist": "^6.0.0",
     "tw-elements": "^1.0.0-beta1",
     "ui": "^0.2.4",
